cp compile_commands into the main source directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,12 @@ PROJECT(wings CXX)
 
 # For YouCompleteMe
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+IF( EXISTS "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json" )
+  EXECUTE_PROCESS( COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json
+    ${CMAKE_CURRENT_SOURCE_DIR}/compile_commands.json
+  )
+ENDIF()
 
 # BOOST
 set(Boost_USE_STATIC_LIBS OFF)
