Added poroelastic test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ ADD_SUBDIRECTORY(test/test_p)  # single pressure uncoupled with rate well
 ADD_SUBDIRECTORY(test/test_pr) # single pressure uncoupled with local refinement with bhp well
 ADD_SUBDIRECTORY(test/test_prm) # single pressure uncoupled with local refinement with bhp well and MPI
 ADD_SUBDIRECTORY(test/test_2p_balhoff) # single pressure uncoupled with local refinement with bhp well and MPI
+ADD_SUBDIRECTORY(test/test_poroelastic) # single pressure uncoupled with local refinement with bhp well
 
 # COMMAND python ${CMAKE_SOURCE_DIR}/benchmarks/test_buckley/buckley_leverett.py
 # set(BUILD_BENCHMARKS OFF)
