Added intial conditions, and abstract classes
AssembleFlowSystem now works
New pure virtual class CellValuesBase
Tests pass

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/FEFunction)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/CellValues)
 
 ADD_LIBRARY(wings SHARED
+	AssembleFlowSystem.hpp
   Simulator.hpp
   Reader.hpp
   SyntaxParser.hpp
