Wellbore take n_phases template parameter.
Model now contains WellInfo instead of Wells
Wells decoupled from the Model

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -36,7 +36,8 @@ ADD_LIBRARY(wings SHARED
   Schedule.hpp
   DefaultValues.h
   LookupTable.hpp
-  Wellbore.hpp
+  Wellbore/Wellbore.hpp
+  Wellbore/Wells.hpp
   OutputHelper.hpp
   ScaleOutputVector.hpp
 )
